--- a/IRTEERAK.html
+++ b/IRTEERAK.html
@@ -23,8 +23,8 @@
     <!-- Botones del índice -->
     <h1> IRTEERAK </h1>
     <p> Hona hemen argiaren aldagaiaren balioa: :="H1":</p>
-    <p> Hona hemen bigareen argiaren aldagaiaren balioa: :="H2":</p>
-    <p> Hona hemen bigareen argiaren aldagaiaren balioa: :="KM3":</p>
+    <p> Hona hemen bigarren argiaren aldagaiaren balioa: :="H2":</p>
+    <p> Hona hemen bigarren argiaren aldagaiaren balioa: :="KM3":</p>
     </div>
     
 
