--- a/ERRONKA___5.html
+++ b/ERRONKA___5.html
@@ -40,6 +40,7 @@
     <div>
         <img src="images/EZTANPAGAILUA_5.PNG" alt="proiektuaren marrazkia" width="500">
         <img src="http://192.168.0.10/images.jpeg" alt="proiektuaren marrazkia" width="500">
+        <img src="http://192.168.0.10/p2.jpg" alt="proiektuaren marrazkia" width="500">
     </div>
 
     <footer>
