--- a/KONFIGURAZIOA.html
+++ b/KONFIGURAZIOA.html
@@ -45,7 +45,7 @@
     </div>
 <div>
     <p> Hona hemen tenporizadoreak barruan dutean datua: :="T1".PT:</p>
-    <p> Hona hemen tenporizadoreak barruan duen datua: :="T1".ET:</p>
+    <p> Hona hemen <a href="https://reloj-alarma.es/temporizador/" target="_blank">tenporizadoreak</a> barruan duen datua: :="T1".ET:</p>
 </div>
     <footer>
         <p>Estanpazio 1 taldea &copy; 2024 - Estanpagailua</p>
