--- a/SARRERAK.html
+++ b/SARRERAK.html
@@ -38,12 +38,19 @@
                 <td><p>Idatzi lauki honetan S1(PRUEBA):</p>
                     <input type='text' name='"S1"' value=':="S1":'/>
                     <input type='submit' value="Bidali PLC-ra"/>
-                </td>
+                </td> 
+               
                 <td><p>Idatzi lauki honetan BOTOIA A+(PRUEBA):</p>
                     <input type='text' name='"BOTOIA A+"' value=':="BOTOIA A+":'/>
                     <input type='submit' value="Bidali PLC-ra"/>
                 </td>
+               
             </tr>
+            <TR>
+                <td colspan="2">    hello!Q             
+                </td>
+                <td>agur</td>
+            </TR>
         </table>
      </form>
     </div>
